--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "10.2.3",
     "next-images": "^1.7.0",
     "nprogress": "^0.2.0",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
@@ -22,6 +24,8 @@
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.8",
     "@types/styled-components": "^5.1.9",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
